--- a/projects.json
+++ b/projects.json
@@ -85,7 +85,7 @@
     "folder": "JumpAndRunWebGL",
     "author": "Jonas Puckmayr",
     "year": "2018_WS",
-    "info": "Jumping and Run Game",
+    "info": "Jump and Run Game",
     "status": 0
   }
 ]
